--- a/sass/_site-layout.scss
+++ b/sass/_site-layout.scss
@@ -23,15 +23,15 @@ body {
 //   background: rgba(147, 128, 108, 0.1);
 // }
 
-@media (max-width: 1024px) {
-  body {
-    flex-direction: row;
-  }
-  .page-content {
-    flex: 1;
-    margin: 0;
-  }
-  // .nav {
-  //   flex: 0 0 12em;
-  // }
-}
+// @media (max-width: 1024px) {
+//   body {
+//     flex-direction: row;
+//   }
+//   .page-content {
+//     flex: 1;
+//     margin: 0;
+//   }
+//   // .nav {
+//   //   flex: 0 0 12em;
+//   // }
+// }
