--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,9 @@
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   18px;
+$base-font-size:   20px;
 $base-font-weight: 400;
-$base-font-size-responsive:   calc(14px + .2vw + .2vh);
+$base-font-size-responsive:   calc(16px + .2vw + .2vh);
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.56;
 
@@ -24,6 +24,7 @@ $grey-color-dark:  mix(black, $grey-color, 45%);
 // Width of the content area
 $content-width:    800px;
 
+$on-mobile:        400px;
 $on-palm:          600px;
 $on-laptop:        800px;
 $on-desktop:       1024px;
